Tmp/teams to release (#386)
* Tmp/from main 003 (#305)

* listingcourtscheduler release 25.01 (#254)

* team branch pom version update

* DD-35058 creating endpoint to delete redundant rota data

* DD-35058 fixing IT test failure-RotaFileProcessorIT-shouldCleanRedundantRotaData

* disable rotafileprocessorit to see if federated credentials created

* New 17.0.29-TECHWORK-1984-SNAPSHOT

* enable RotaFileProcessorIT to connect via managed identity

* New 17.0.30-TECHWORK-1984-SNAPSHOT

* changing the pom version name to liase with branch name

* New 17.0.31-TECHWORK-SNAPSHOT

* DD-35624 dropping unused tables, most of being refdata tables

* referencedata version update 17.0.33

* New 17.0.32-TECHWORK-SNAPSHOT

* update pom version to equalize with main branch to release

* DD-36021 panel, courtsession multiple different values to be searched-get.hearing.slots endpoint

* Merge branch 'team/rel2426' into dev/DD-36021

* updating pom version to have branch naming

* New 17.0.29-TECHWORKREL-SNAPSHOT

* updated pom versions for release branch

* New 17.0.32-SNAPSHOT

---------

Co-authored-by: Mehmet Alpak <mehmet.alpak2@HMCTS.NET>
Co-authored-by: samialpak <39771835+samialpak@users.noreply.github.com>
Co-authored-by: devops-team <devops-team@hmcts.net>

* updating poms for 17.0.33-SNAPSHOT development

* updating poms for 17.0.33 branch with snapshot versions

* updating poms for 17.0.34-SNAPSHOT development

* updating poms for branch'dev/release-17.0.33' with non-snapshot versions

* updating develop poms to master versions to avoid merge conflicts

* Updating develop poms back to pre merge state

* fixing IT test failures caused by hard coded startDate on create.courtscheduler request payload

* updating poms for 17.0.34 branch with snapshot versions

* updating poms for 17.0.35-SNAPSHOT development

* updating poms for branch'dev/release-17.0.34' with non-snapshot versions

* updating develop poms to 